# password-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
migrations/: 20240000000000_init.sql  20240318000000_create_credentials_table.sql  20240318000001_create_users_table.sql
src/: api_docs.rs  auth.rs  crypto.rs  db.rs  error.rs  main.rs
