[package]
name = "password-manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "time"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
dotenv = "0.15"
jsonwebtoken = "8.3"
bcrypt = "0.14"
time = "0.3"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

[dev-dependencies]
cargo-watch = "8.4" 